2006-02-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-extractor.c:
	I was a muppet and didn't have the right packages installed.  Far
	better solution to MusicBrainz tagging.

2006-02-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-extractor.c:
	Detect a MusicBrainz-tag supporting GStreamer at build time.

2006-02-07  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Disable Select All when there is no disc (#329389).

2006-02-07  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Ignore unknown options, it produces an ugly error (#330023).

2006-02-07  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix build with GStreamer CVS by renaming functions I stole
	(#330285).

2006-01-30  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use GnomeProgram again, it's needed for gnome_help_display() to
	work (#329256)

2006-01-30  Ryan Lortie  <desrt@desrt.ca>

	* src/sj-prefs.c:
	Remove unrequired use of 'strip' variable (#328918).

2006-01-30  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.4.

2006-01-21  Ross Burton  <ross@burtonini.com>

	* src/bacon-message-connection.c:
	* src/bacon-message-connection.h:
	Update (#327979).

2006-01-21  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add GTK category (#328024).

2006-01-19  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Unlock the drive before ejecting.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Rebuild the pipeline after every track for now, to fix a crash.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.3.

2006-01-19  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* data/sound-juicer.schemas.in:
	* src/sj-extractor.c:
	* src/sj-main.c:
	* src/sj-play,c:
	Merge GStreamer 0.10 port from the branch.

2006-01-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.2.
