@@ -1,5 +1,10 @@
 2006-02-07  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.c:
+	Fix build when Musicbrainz tags are present.
+
+2006-02-07  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* src/sj-extractor.c:
 	I was a muppet and didn't have the right packages installed.  Far
